--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,11 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 2%
+
 }
 
 ul {
@@ -333,6 +338,10 @@ a {
         grid-template-columns: repeat(2, 1fr);
         gap: 10px
     }
+    .skill__title {
+        font-size: 28px;
+        line-height: 32px;
+    }
 }
 
 @media (max-width: 321px) {
@@ -343,5 +352,95 @@ a {
     }
 }
 
-
 /* Skills End */
+
+
+/* Exp Start */
+
+.exp {
+    padding: 60px 0;
+    background-color: #000;
+    color: #fff
+}
+
+
+.exp__title {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 56px;
+    color: #fff;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.exp__span {
+    font-weight: 800;
+}
+
+
+.exp__list-item {
+    width: 100%;
+    border: 1px solid #71717a;
+    border-radius: 10px;
+    padding: 30px 24px;
+}
+
+.exp__item-title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.exp__item-desc {
+    color: #D4D4D8;
+}
+
+.exp__list-item:hover {
+    background-color: #27272A;
+}
+
+.exp__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.exp__roww {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.exp__list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    padding: 40px 24px;
+}
+
+@media (max-width: 426px) {
+    .exp__row {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        margin-bottom: 30px;
+    }
+    .exp__roww {
+        margin-bottom: 20px;
+    }
+    .exp__list {
+        padding: 0;
+    }
+    .exp__item-title {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    .exp__title {
+        font-size: 28px;
+        line-height: 32px;
+    }
+}
+
+
+/* Exp End */
+
