--- a/css/main.css
+++ b/css/main.css
@@ -165,8 +165,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 64px;
-    height: 64px;
+    width: 56px;
+    height: 56px;
     padding: 16px;
     border-radius: 4px;
     color: #000;
@@ -249,7 +249,7 @@ a {
 /* Skills Start*/
 
 .skills {
-    padding: 60px 0;
+    padding: 80px 0;
 }
 
 .skill__row {
@@ -330,6 +330,9 @@ a {
         grid-template-columns: repeat(3, 1fr);
         gap: 40px
     }
+    .skills {
+        padding: 40px 0;
+    }
 }
 
 @media (max-width: 426px) {
@@ -358,7 +361,7 @@ a {
 /* Exp Start */
 
 .exp {
-    padding: 60px 0;
+    padding: 80px 0;
     background-color: #000;
     color: #fff
 }
@@ -420,6 +423,9 @@ a {
 }
 
 @media (max-width: 426px) {
+    .exp {
+        padding: 40px
+    }
     .exp__row {
         display: flex;
         flex-direction: column;
@@ -450,7 +456,7 @@ a {
 /* About Me */
 
 .about {
-    padding: 60px 0;
+    padding: 80px 0;
     background-color: #fff;
 }
 
@@ -745,3 +751,149 @@ a {
 }
 
 /* Testimional End */
+
+
+
+/* Contact Start */
+.contact {
+    padding: 80px 0;
+}
+
+.contact__form {
+    width: 100%;
+    max-width: 500px;
+}
+.form-group {
+    margin-bottom: 20px;
+}
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1.4px solid #000;
+    border-radius: 4px;
+    font-size: 16px;
+}
+.form-group textarea {
+    height: 100px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+.submit-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.submit-btn:hover {
+    background-color: #333;
+}
+
+.contact__touch {
+    text-wrap: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    border-radius: 4px;
+    color: #000;
+    border: 1px solid #000;
+    background-color: #fff;
+}
+
+.contact__social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 24px;
+}
+
+
+.contact__touch:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.contact__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+
+.contact__title {
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 56px;
+    margin-bottom: 20px;
+    color: #000;
+}
+
+.contact__desc {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color:#71717A;
+    margin-bottom: 40px;
+}
+
+.content {
+    width: 100%;
+    max-width: 608px;
+}
+
+.contact__text {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 32px;
+    color: #000;
+    margin-bottom: 8px;
+}
+
+@media (max-width: 1024px) {
+    .contact__row {
+        display: flex;
+        align-items: start;
+    }
+    .content {
+        width: 100%;
+        max-width: 428px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact {
+        width: 100%;
+        padding: 40px 0;
+    }
+    .contact__row {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact__form {
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 426px) {
+    .contact__title {
+        font-size: 28px;
+        line-height: 32px;
+    }
+    .contact__text {
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .contact__desc {
+        margin-bottom: 10px;
+    }
+    
+}
