--- a/css/main.css
+++ b/css/main.css
@@ -897,3 +897,35 @@ a {
     }
     
 }
+
+/* Contact End */
+
+/* Site Footer Start */
+
+.site-footer {
+    background-color: #000;
+    padding: 24px 0;
+}
+
+.site-footer__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.site-footer__desc {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+    text-align: end;
+}
+
+@media (max-width: 426px) {
+    .site-footer__desc {
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 20px;
+        color: #fff;
+    }
+}
