--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ a {
 @media (max-width: 768px) {
     .skill__list {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 40px
     }
     .skills {
@@ -344,6 +344,14 @@ a {
     .skill__title {
         font-size: 28px;
         line-height: 32px;
+    }
+}
+
+@media (max-width: 376px) {
+    .skill__list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px
     }
 }
 
@@ -502,6 +510,10 @@ a {
     }
     .about {
         padding: 40px 0;
+    }
+    .about__img {
+        width: 100%;
+        height: 374px;
     }
     
 }
